--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table>
     <tr>
-      <td> <img src="Images/pc-keller-hedgehog.jpg" alt="a hedgehog"></td>
+      <td> <img src="pc-keller-hedgehog.jpg" alt="a hedgehog"></td>
       <td>
         <h1>Allie Jackson</h1>
         <br>
